# BasicsOfProgrammingCourse

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithms/: algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt  main.c
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/string/tasks/: areSameWordsInString.h  areTwoWordsWithSameLetters.h  countPalidromes.h  digitsToStartAndReverseThem.h  digitsToStartWithSave.h  getAlternatingStringFromTwoOthers.h  getLastWordOfFirstStringInSecondString.h  isWordsOrderedLexically.h  printWordBeforeFirstWordWithA.h  removeAdjacentEqualLetters.h  removeAllWordsLikeLastInString.h  removeExtraSpaces.h  removeNonLetters.h  replaceAllWords1ToWord2.h  replaceEachDigitToSpaces.h  reverseEachWord.h  reverseWordsInString.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
libs/time_measuring/: CMakeLists.txt  main.c
libs/time_measuring/sorts/: sorts.c  sorts.h
